--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -11,8 +11,8 @@
     tools:showIn="@layout/activity_detail">
 
     <TextView
+        android:id="@+id/textForecast"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello"/>
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
